# fundingbot-adapters

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  [example].env  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yml
src/: config.py
src/fundingbot_adapters/: bitget_client.py
tests/integration/: base.py  test_bitget_client.py
